fixing user index page alignment

--- a/app/assets/stylesheets/custom.css.less
+++ b/app/assets/stylesheets/custom.css.less
@@ -148,8 +148,6 @@ a { color:#777;}
 /*   Tables   */
 
 /* ~ @ ~ @ ~ @ ~ @ ~ @ ~ @ ~ @ ~ @ ~ @ ~ @ ~ */
-
-
 .item-ids-column {
     min-height:717px; margin-left:0; margin-right:0; padding-left:0; padding-right:0; color:@off-black;
     position:absolute; width:170px; z-index:20;
@@ -160,6 +158,7 @@ thead {
     font-size: 12px;
 tr {
 td {vertical-align:bottom; padding-top:14px; padding-right:30px;}
+  .users-table { padding-top:7px; }
 }
 }
 tbody {
